--- a/meal-preps.html
+++ b/meal-preps.html
@@ -61,9 +61,51 @@
                     <tr>
                         <td>Senin</td>
                         <td>Bubur dengan susu skim dan satu pisang yang diiris di atasnya.</td>
-                        <td>Sup lentil dan sayuran, kalengan atau coba resep sup wortel dan parsnip kami yang mudah (digambarkan); dua irisan roti gandum utuh dengan olesan (olesan berbasis sayuran, minyak zaitun, atau minyak bunga matahari akan tidak jenuh sehingga lebih baik untuk jantung daripada mentega).</td>
+                        <td>Sup lentil dan sayuran, kalengan atau coba resep sup wortel dan parsnip kami yang mudah (digambarkan); dua irisan roti gandum utuh dengan olesan (olesan berbasis sayuran, minyak zaitun, atau minyak bunga matahari lebih baik untuk jantung daripada mentega).</td>
                         <td>Satu kentang jaket ukuran sedang (dimasak di microwave atau oven) dengan satu kaleng sarden dalam saus tomat, disajikan dengan kacang polong.</td>
                         <td>Dua satsuma (atau yang mudah dikupas); satu apel; segenggam kecil kacang tanah tanpa garam (30g); satu porsi (125g) yoghurt gaya Yunani bebas lemak.</td>
+                    </tr>
+                    <tr>
+                        <td>Selasa</td>
+                        <td>Dua irisan roti gandum utuh dengan olesan, satu telur rebus, dan satu tomat sedang yang diiris.</td>
+                        <td>Sup wortel dan parsnip kami (gunakan sisa dari resep hari Senin, atau buat baru dengan porsi tambahan untuk dibekukan); dua irisan roti gandum utuh dengan olesan.</td>
+                        <td>Goulash sayuran dan kacang buatan sendiri (digambarkan); nasi cokelat; brokoli.</td>
+                        <td>Tiga oatcake dengan keju krim rendah lemak atau quark; satu buah pir.</td>
+                    </tr>
+                    <tr>
+                        <td>Rabu</td>
+                        <td>Muesli tanpa gula tambahan dengan susu skim, di atasnya satu pisang yang diiris.</td>
+                        <td>Kentang jaket dengan setengah kaleng kacang panggang rendah gula dan garam; seporsi salad.</td>
+                        <td>Risotto barley bit (digambarkan); disajikan dengan kacang polong.</td>
+                        <td>Satu wortel dipotong menjadi stik; segenggam kecil kacang tanah tanpa garam; dua satsuma.</td>
+                    </tr>
+                    <tr>
+                        <td>Kamis</td>
+                        <td>Dua irisan roti gandum utuh dengan olesan, pisang yang diiris atau dihaluskan, dan satu porsi yoghurt bebas lemak gaya Yunani.</td>
+                        <td>Sandwich roti gandum utuh dengan telur, tomat, dan mentimun.</td>
+                        <td>Spaghetti gandum utuh dengan sarden dan tomat ceri; seporsi salad.</td>
+                        <td>Dua buah plum; dua oatcake dengan olesan; satu buah pir.</td>
+                    </tr>
+                    <tr>
+                        <td>Jumat</td>
+                        <td>Muesli tanpa gula tambahan dengan susu skim dan pisang.</td>
+                        <td>Sandwich salad keju dibuat dengan Cheddar rendah lemak, salad, dua irisan roti gandum utuh, dan olesan.</td>
+                        <td>Frittata jamur dan kembang kol buatan sendiri, disajikan dengan kacang polong dan wortel atau sayuran sisa lainnya.</td>
+                        <td>Dua buah plum; dua oatcake dengan olesan; satu buah pir.</td>
+                    </tr>
+                    <tr>
+                        <td>Sabtu</td>
+                        <td>Bubur dengan susu skim; satu pisang.</td>
+                        <td>Sup sayuran, kalengan atau coba resep sup sayuran campur dan kacang kami yang lezat.</td>
+                        <td>Pasta panggang tuna dan jagung manis buatan sendiri, disajikan dengan kembang kol dan brokoli.</td>
+                        <td>Segenggam kecil kacang tanah tanpa garam, satu apel, satu buah pir.</td>
+                    </tr>
+                    <tr>
+                        <td>Minggu</td>
+                        <td>Telur rebus dan seporsi jamur yang dimasak, dengan dua irisan roti gandum utuh.</td>
+                        <td>Traybake ayam dan sayuran (digambarkan); apel panggang dengan kismis berempah dan custard rendah lemak atau custard buatan sendiri dengan susu rendah lemak.</td>
+                        <td>Sandwich roti gandum utuh dengan ayam, mentimun, dan tomat (menggunakan sisa dari traybake makan siang).</td>
+                        <td>Segenggam kecil kacang tanah tanpa garam; satu wortel dipotong menjadi stik; dua satsuma (atau yang mudah dikupas).</td>
                     </tr>
                 </table>
             </section>
