--- a/meal-preps.html
+++ b/meal-preps.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="olahraga, persiapan makanan, latihan gym, latihan di rumah.">
     <title>Gaya Hidup Sehat</title>
     <link rel="icon" href="assets/favicon/favicon.webp">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
