Membuat Halaman Workout Routines

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gaya Hidup Sehat. Gym di Poznan, Polandia. Morawskiego, kebugaran">
-    <meta name="keywords" content="olahraga, persiapan makanan, latihan gym, latihan di rumah.">
-    <title>Gaya Hidup Sehat</title>
-    <link rel="icon" href="assets/favicon/favicon.webp">
-    <link rel="stylesheet" href="style.css">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Fit Lifestyle. Gym is Poznan, Poland. Morawskiego, fitness">
+    <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
+    <title>Fit Lifestyle</title>
+    <!-- Favicon -->
+    <link rel="icon" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\style.css">
 </head>
 
 <body>
+    <!--Header-->
     <header>
         <div class="logo">
-            <a href="index.html" aria-label="Kunjungi halaman utama kami">
-                <img src="assets/favicon/favicon.webp" alt="logo">
+            <a href="index.html" aria-label="Visit our home page">
+                <img src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png" alt="logo">
             </a>
-            <a href="index.html" aria-label="Kunjungi halaman utama kami">
-                <h1>Gaya Hidup Sehat</h1>
+            <a href="index.html" aria-label="Visit our home page">
+                <h1>Fit Lifestyle</h1>
             </a>
         </div>
 
@@ -27,10 +31,10 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="menu">
-                <li><a href="index.html" aria-label="Kunjungi halaman utama kami">Beranda</a></li>
-                <li><a href="workout-routines.html" aria-label="Kunjungi halaman latihan kami">Latihan</a></li>
-                <li><a href="meal-preps.html" class="active" aria-label="Kunjungi halaman persiapan makanan kami">Persiapan Makanan</a></li>
-                <li><a href="sign-up.html" aria-label="Kunjungi halaman pendaftaran kami">Daftar</a></li>
+                <li><a href="index.html" aria-label="Visit our home page">Home</a></li>
+                <li><a href="workout-routines.html" class="active" aria-label="Visit our workout routines page">Workout Routines</a></li>
+                <li><a href="meal-preps.html" aria-label="Visit our meal preps page">Meal Preps</a></li>
+                <li><a href="sign-up.html" aria-label="Visit our sign up page">Sign Up</a></li>
             </ul>
         </nav>
     </header>
