--- a/workout-routines.html
+++ b/workout-routines.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Fit Lifestyle</title>
     <!-- Favicon -->
-    <link rel="icon" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png">
+    <link rel="icon" href="indexpics\weblogo.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="index.html" aria-label="Visit our home page">
-                <img src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png" alt="logo">
+                <img src="indexpics\weblogo.png" alt="logo">
             </a>
             <a href="index.html" aria-label="Visit our home page">
                 <h1>Fit Lifestyle</h1>
@@ -83,28 +83,28 @@
                     <div class="tuesday-videos">
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\tuesday\deadlift.mp4" controls autoplay muted loop>
+                            <video src="videos\tuesday\deadlift.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Deadlifts</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\tuesday\hip-thrusts.mp4" controls autoplay muted loop>
+                            <video src="videos\tuesday\hip-thrusts.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Hip thrusts</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\tuesday\lunges.mp4" controls autoplay muted loop>
+                            <video src="videos\tuesday\lunges.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lunges</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\tuesday\squats.mp4" controls autoplay muted loop>
+                            <video src="videos\tuesday\squats.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Squats</p>
@@ -130,21 +130,21 @@
                     <div class="wednesday-videos">
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\wednesday\bicep-curl.mp4" controls autoplay muted loop>
+                            <video src="videos\wednesday\bicep-curl.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Bicep Curl</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\wednesday\chest-press.mp4" controls autoplay muted loop>
+                            <video src="videos\wednesday\chest-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\wednesday\tricep-dip.mp4" controls autoplay muted loop>
+                            <video src="videos\wednesday\tricep-dip.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
@@ -177,7 +177,7 @@
 
                         <!--Friday workout video-->
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\friday\resistant-band_wo-legs.mp4" controls autoplay muted loop>
+                            <video src="videos\friday\resistant-band_wo-legs.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Leg strecth with resistance band and Squats</p>
@@ -209,7 +209,7 @@
                     <div class="saturday-videos">
 
                         <div class="workout-vid">
-                            <video src="aC:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\saturday\dumbbell-single-arm-row.mp4" controls autoplay muted
+                            <video src="videos\saturday\dumbbell-single-arm-row.mp4" controls autoplay muted
                                 loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
@@ -217,21 +217,21 @@
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\saturday\lat-pull-down.mp4" controls autoplay muted loop>
+                            <video src="videos\saturday\lat-pull-down.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lat Pull down</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\saturday\lateral-raise.mp4" controls autoplay muted loop>
+                            <video src="videos\saturday\lateral-raise.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lateral raise</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\saturday\shoulder-press.mp4" controls autoplay muted loop>
+                            <video src="videos\saturday\shoulder-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Shoulder Press</p>
@@ -253,14 +253,14 @@
                     <!--Sunday workout videos-->
                     <div class="sunday-videos">
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\sunday\stretching.mp4" controls autoplay muted loop>
+                            <video src="videos\sunday\stretching.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>A form of stretching</p>
                         </div>
 
                         <div class="workout-vid">
-                            <video src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\videos\sunday\yoga.mp4" controls autoplay muted loop>
+                            <video src="videos\sunday\yoga.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Yoga</p>
