--- a/meal-preps.html
+++ b/meal-preps.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Fit Lifestyle</title>
     <!-- Favicon -->
-    <link rel="icon" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png">
+    <link rel="icon" href="indexpics\weblogo.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="index.html" aria-label="Visit our home page">
-                <img src="C:\Front End\UTS-FRONT-END--Website-tentang-Lifestyle-\indexpics\weblogo.png" alt="logo">
+                <img src="weblogo.png" alt="logo">
             </a>
             <a href="index.html" aria-label="Visit our home page">
                 <h1>Fit Lifestyle</h1>
