--- a/workout-routines.html
+++ b/workout-routines.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Fit Lifestyle. Gym is Poznan, Poland. Morawskiego, fitness">
+    <meta name="description" content="Your Health Journey. Gym is Poznan, Poland. Morawskiego, fitness">
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
-    <title>Fit Lifestyle</title>
+    <title>Your Health Journey</title>
     <!-- Favicon -->
     <link rel="icon" href="indexpics\weblogo.png">
     <!-- Stylesheet -->
@@ -23,7 +23,7 @@
                 <img src="indexpics\weblogo.png" alt="logo">
             </a>
             <a href="index.html" aria-label="Visit our home page">
-                <h1>Fit Lifestyle</h1>
+                <h1>Your Health Journey</h1>
             </a>
         </div>
 
