Mengubah Kata-kata di judul

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Your Health Journey. Gym is Poznan, Poland. Morawskiego, fitness">
+    <meta name="description" content="Your Health Journey. Start your goals with us.">
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Your Health Journey</title>
     <!-- Favicon -->
