--- a/meal-preps.html
+++ b/meal-preps.html
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="index.html" aria-label="Visit our home page">
-                <img src="weblogo.png" alt="logo">
+                <img src="indexpics/weblogo.png" alt="logo">
             </a>
             <a href="index.html" aria-label="Visit our home page">
                 <h1>Your Health Journey</h1>
@@ -117,30 +117,7 @@
         </section>
 
     </main>
-
-    <footer>
-        <p>"Jika itu tidak menantang Anda, itu tidak akan mengubah Anda." <strong>FRED_DEVITO</strong></p>
-
-        <section class="social-media">
-            <h2 class="hide">Tersembunyi</h2>
-            <p>Ikuti Kami</p>
-
-            <ul class="social-networks">
-                <li>
-                    <a href="https://x.com/" target="_blank" rel="noopener" aria-label="Kunjungi halaman X kami (dibuka di tab baru)"><i class="fa-brands fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://wwww.facebook.com/" target="_blank" rel="noopener" aria-label="Kunjungi halaman Facebook kami (dibuka di tab baru)"><i class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Kunjungi halaman Instagram kami (dibuka di tab baru)"><i class="fa-brands fa-instagram"></i></a>
-                </li>
-            </ul>
-            
-        </section>
-
-    </footer>
-
+    
     <script src="https://kit.fontawesome.com/d4243b7aeb.js" crossorigin="anonymous"></script>
 </body>
 
